--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
     "pages/two/two",
+    "pages/getUser",
     "pages/one/detail/detail",
     "pages/one/index",
     "pages/me/me",
@@ -27,7 +28,8 @@
     "pages/planmanage/plandetail",
     "pages/one/detail2/detail2",
     "pages/one/detail/web",
-    "pages/me/runnersSettle/runnersSettle"
+    "pages/me/runnersSettle/runnersSettle",
+    "pages/clockin_new/clockin_new"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
